--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,14 +1,27 @@
 *{
     margin: 0;
-    font-family: sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+    transition: all 0.4s;
+    font-family: -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol";
 }
-#header{
-
+.home{
+    width: 100%;
+    height: 100vh;
+    background-color: #ddd;
 }
 .ums{
-    background-color: #000000;
     height: 100px;
-    color: #fff
+    text-align: center ;
 }
 #branche{
     background-color: rgba(128, 128, 128, 0.452);
@@ -29,8 +42,23 @@
     background-color: yellow;
 }
 .items:nth-child(2){
-    background-color: rgb(43, 255, 0);
+    background-color: rgb(67, 201, 51);
 }
 .items:nth-child(3){
     background-color: rgb(0, 81, 255);
+}
+#containeur1{
+    min-height: 400px;
+    background-color: yellow;
+}
+#containeur2{
+    min-height: 400px;
+    background-color: rgb(67, 201, 51);
+}
+#containeur3{
+    min-height: 400px;
+    background-color: blue;
+}
+#pied{
+    min-height: 300px;
 }
