--- a/view/css/style.css
+++ b/view/css/style.css
@@ -17,7 +17,7 @@
 .home{
     width: 100%;
     height: 100vh;
-    background-color: #ddd;
+    background-color: #4d4d4d;
 }
 .ums{
     height: 100px;
@@ -31,10 +31,10 @@
     min-height: 400px;
 }
 .items{
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     color: #fff;
-    border-radius: 150px;
+    border-radius: 100px;
     justify-content: center;
     align-items: center;
 }
