--- a/view/css/style.css
+++ b/view/css/style.css
@@ -14,10 +14,11 @@
     "Segoe UI Emoji",
     "Segoe UI Symbol";
 }
-.home{
+#home{
     width: 100%;
     height: 100vh;
     background-color: #4d4d4d;
+    color: #fff;
 }
 .ums{
     height: 100px;
