--- a/view/css/style.css
+++ b/view/css/style.css
@@ -3,23 +3,38 @@
     padding: 0;
     box-sizing: border-box;
     transition: all 0.4s;
-    font-family: -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Helvetica,
-    Arial,
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol";
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16pt;
 }
 #home{
     width: 100%;
     height: 100vh;
-    background-color: #4d4d4d;
-    color: #fff;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+.home1{
+    width:500px;
+    height: 300px;
+    color: #fff;
+    justify-content: space-around;
+    align-items: center;
+}
+.home1:nth-child(1){
+    padding-top: 8%;
+    text-align: center;
+}
+.home1:nth-child(2){
+    background-color: #ffffff00;
+}
+.photo1{
+    display: flex;
+    width: 70%;
+    margin: auto;
+}
+
+
 .ums{
     height: 100px;
     text-align: center ;
