--- a/view/css/style.css
+++ b/view/css/style.css
@@ -6,39 +6,8 @@
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-size: 16pt;
 }
-#home{
-    width: 100%;
-    height: 100vh;
-    background-color: #000000;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.home1{
-    width:500px;
-    height: 300px;
-    color: #fff;
-    justify-content: space-around;
-    align-items: center;
-}
-.home1:nth-child(1){
-    padding-top: 8%;
-    text-align: center;
-}
-.home1:nth-child(2){
-    background-color: #ffffff00;
-}
-.photo1{
-    display: flex;
-    width: 70%;
-    margin: auto;
-}
 
 
-.ums{
-    height: 100px;
-    text-align: center ;
-}
 #branche{
     background-color: rgba(128, 128, 128, 0.452);
     display: flex;
@@ -63,18 +32,203 @@
 .items:nth-child(3){
     background-color: rgb(0, 81, 255);
 }
+@media screen and (max-width:768px){
+    #branche{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .items{
+        margin-top: 75px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+
+}
+
+
+
+#home{
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.home1{
+    width:500px;
+    height: 300px;
+    color: #fff;
+    justify-content: space-around;
+    align-items: center;
+}
+.home1:nth-child(1){
+    padding-top: 8%;
+    text-align: center;
+}
+.home1:nth-child(2){
+    background-color: #6d67671a;
+    border-radius: 10%;
+    height: 500px;
+}
+.photo1{
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+@media screen and (max-width:768px){
+    #home{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .home1{
+        margin-top: 5px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+    .home1:nth-child(2){
+        margin-top: 75px;
+    }
+}
+
+
+
 #containeur1{
-    min-height: 400px;
-    background-color: yellow;
+    height: 100vh;
+    background-color: rgb(243, 243, 45);
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
 }
+.u-cons{
+    width:500px;
+    height: 300px;
+    color: #000000;
+    justify-content: space-around;
+    align-items: center;
+}
+.u-cons:nth-child(1){
+    background-color: #6d67671a;
+    border-radius: 10%;
+    height: 500px;
+}
+.u-cons:nth-child(2){
+    padding-top: 8%;
+    text-align: center;
+}
+.photo2{
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+@media screen and (max-width:768px){
+    #containeur1{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .u-cons{
+        margin-top: 5px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+    .u-cons:nth-child(1){
+        margin-top: 75px;
+    }
+}
+
+
 #containeur2{
-    min-height: 400px;
     background-color: rgb(67, 201, 51);
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    height: 100vh;
 }
+.u-tech{
+    width:500px;
+    height: 300px;
+    color: #fff;
+    justify-content: space-around;
+    align-items: center;
+}
+.u-tech:nth-child(1){
+    padding-top: 8%;
+    text-align: center;
+}
+.u-tech:nth-child(2){
+    background-color: #6d67671a;
+    border-radius: 10%;
+    height: 500px;
+}
+.photo3{
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+@media screen and (max-width:768px){
+    #containeur2{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .u-tech{
+        margin-top: 5px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+    .u-tech:nth-child(2){
+        margin-top: 75px;
+    }
+}
+
+
 #containeur3{
-    min-height: 400px;
     background-color: blue;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    height: 100vh;
 }
+.u-elec{
+    width:500px;
+    height: 300px;
+    color: #ffffff;
+    justify-content: space-around;
+    align-items: center;
+}
+.u-elec:nth-child(1){
+    background-color: #6d67671a;
+    border-radius: 10%;
+    height: 500px;
+}
+.u-elec:nth-child(2){
+    padding-top: 8%;
+    text-align: center;
+}
+.photo4{
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+@media screen and (max-width:768px){
+    #containeur3{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .u-elec{
+        margin-top: 5px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+    .u-elec:nth-child(1){
+        margin-top: 75px;
+    }
+}
+
 #pied{
     min-height: 300px;
 }
