--- a/view/css/style.css
+++ b/view/css/style.css
@@ -9,7 +9,7 @@
 
 
 #branche{
-    background-color: rgba(128, 128, 128, 0.452);
+    background-color: rgba(197, 197, 197, 0.452);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -51,7 +51,7 @@
 #home{
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background: linear-gradient(to right top,rgb(0, 0, 0), rgb(255, 255, 255));
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -97,7 +97,7 @@
 
 #containeur1{
     height: 100vh;
-    background-color: rgb(243, 243, 45);
+    background-color: #fff;
     justify-content: space-around;
     align-items: center;
     display: flex;
@@ -141,7 +141,7 @@
 
 
 #containeur2{
-    background-color: rgb(67, 201, 51);
+    background-color: #46464657;
     justify-content: space-around;
     align-items: center;
     display: flex;
@@ -150,7 +150,7 @@
 .u-tech{
     width:500px;
     height: 300px;
-    color: #fff;
+    color: #000000;
     justify-content: space-around;
     align-items: center;
 }
@@ -186,7 +186,7 @@
 
 
 #containeur3{
-    background-color: blue;
+    background: white;
     justify-content: space-around;
     align-items: center;
     display: flex;
@@ -195,7 +195,7 @@
 .u-elec{
     width:500px;
     height: 300px;
-    color: #ffffff;
+    color: #000000;
     justify-content: space-around;
     align-items: center;
 }
@@ -229,6 +229,41 @@
     }
 }
 
+
 #pied{
     min-height: 300px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    background-color: #46464657;
+}
+.foot{
+    width:400px;
+    justify-content: space-around;
+    align-items: center;
+}
+.foot:nth-child(1){
+    width: 600px;
+}
+.foot:nth-child(2){
+    padding-top: 8%;
+    text-align: center;
+}
+@media screen and (max-width:768px){
+    #pied{
+        flex-direction: column;
+        padding-bottom: 75px;
+    }
+    .foot{
+        margin-top: 20px;
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+    .foot:nth-child(1){
+        width: 70%;
+    }
+    .foot:nth-child(2){
+        margin-top: 75px;
+    }
 }
