--- a/view/css/nav.css
+++ b/view/css/nav.css
@@ -31,9 +31,9 @@
 }
 
 .nav div.main_list{
-    width: 400px;
+    width: 500px;
     height: 65px;
-    float: right;
+    margin: auto;
 }
 
 .nav div.main_list ul{
@@ -47,6 +47,7 @@
     width: 120px;
     height: 65px;
 }
+
 
 .nav div.main_list ul li a{
     text-decoration: none;
