--- a/view/css/style.css
+++ b/view/css/style.css
@@ -24,7 +24,7 @@
     align-items: center;
 }
 .items:nth-child(1){
-    background-color: yellow;
+    background-color: rgb(255, 255, 255);
 }
 .items:nth-child(2){
     background-color: rgb(67, 201, 51);
@@ -63,6 +63,7 @@
     justify-content: space-around;
     align-items: center;
 }
+
 .home1:nth-child(1){
     padding-top: 8%;
     text-align: center;
@@ -71,10 +72,12 @@
 .home1:nth-child(2){
     border-radius: 2%;
 }
+
 @media screen and (max-width:768px){
     #home{
         flex-direction: column;
         padding-bottom: 75px;
+        background: linear-gradient(to right top,rgb(255, 255, 255), rgb(0, 0, 0));
     }
     .home1{
         margin-top: 5px;
@@ -223,24 +226,43 @@
     width: 600px;
 }
 .foot:nth-child(2){
-    padding-top: 8%;
+    background-color: #0000001c;
     text-align: center;
+    border-left: solid #000000 1px;
+    border-right: solid #000000 1px;
+    color: #fff;
+}
+a{
+    text-decoration: none;
+}
+.fa{
+    color: #ffffff;
+    margin-left: 5%;
+}
+.copyright{
+    font-size: 12pt;
 }
 @media screen and (max-width:768px){
     #pied{
         flex-direction: column;
-        padding-bottom: 75px;
     }
     .foot{
-        margin-top: 20px;
-        width: 300px;
-        height: 300px;
-        border-radius: 150px;
+
     }
     .foot:nth-child(1){
         width: 70%;
+        padding-top: 10%;
     }
     .foot:nth-child(2){
-        margin-top: 75px;
+        margin-top: 10%;
+        border-left: none;
+        border-right: none;
+        border-top: #000000 solid 1px;
+    }
+    .copyright{
+        padding-top: 10%;
+        padding-bottom: 10%;
     }
 }
+
+
